--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="footer-logo">
           <!-- <img src="marc.png" alt=""> -->
             <div class="logo">
-                <img src="marc.png" alt="Logo" />
+                <img src="marc.png" alt="Logo"  onclick="window.scrollTo({ top: 0, behavior: 'smooth' });" />
             </div>
             <p >Legal Notice</p>
         </div>
