--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <header  class="header">
 
   <div class="logo">
-    <img src="marc.png" alt="Logo" />
+    <img src="marc.png" alt="Logo" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });" />
   </div>
   
   
