--- a/src/app/mainPage/impressum/impressum.component.html
+++ b/src/app/mainPage/impressum/impressum.component.html
@@ -1,1 +1,20 @@
-<p>impressum works!</p>
+<section>
+
+    <div class="over">
+
+
+        <h1>Impressum</h1>
+
+        <p>Marc Vossler<br />
+            Oderbergerstra&szlig;e 14<br />
+            Geb&auml;ude 44<br />
+            16230 Britz</p>
+
+        <h2>Kontakt</h2>
+        <p>Telefon: 017641955477<br />
+            E-Mail: info&#64;marcvossler.de</p>
+
+        <p>Quelle: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a></p>
+    </div>
+
+</section>
