--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,19 +1,28 @@
-<footer    class="footer">
+<footer class="footer">
     <div class="footer-content">
         <div class="footer-logo">
-          <!-- <img src="marc.png" alt=""> -->
+            <!-- <img src="marc.png" alt=""> -->
             <div class="logo">
-                <img src="marc.png" alt="Logo"   />
+                <img src="marc.png" alt="Logo" />
+                
             </div>
-            <p >Legal Notice</p>
+          
         </div>
         <div class="footer-copyright">
             <p>© Marc Vossler 2024</p>
+            <div class="data">
+                <a class="impressum" routerLink="/impressum">Impressum</a>
+                <a class="Policy" routerLink="/impressum">Private Policy</a>
+            </div>
+
         </div>
         <div class="footer-icons">
-            <a href="https://github.com/DerBlockProgrammer"  target="_blank" rel="noopener noreferrer"><img src="./background/github.png" alt=""></a>
-            <a href="https://www.linkedin.com/in/marcvossler?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" rel="noopener noreferrer"><img src="2.hero/icon/linkedIn.png" alt=""></a>
-            <a href="mailto:info@DieAkadmie.de" target="_blank" rel="noopener noreferrer"> <img src="2.hero/icon/mail.png"  target="_blank" rel="noopener noreferrer"alt=""></a>
+            <a href="https://github.com/DerBlockProgrammer" target="_blank" rel="noopener noreferrer"><img
+                    src="./background/github.png" alt=""></a>
+            <a href="https://www.linkedin.com/in/marcvossler?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+                target="_blank" rel="noopener noreferrer"><img src="2.hero/icon/linkedIn.png" alt=""></a>
+            <a href="mailto:info@DieAkadmie.de" target="_blank" rel="noopener noreferrer"> <img
+                    src="2.hero/icon/mail.png" target="_blank" rel="noopener noreferrer" alt=""></a>
         </div>
     </div>
 </footer>
