--- a/src/app/mainPage/about-me/about-me.component.scss
+++ b/src/app/mainPage/about-me/about-me.component.scss
@@ -4,7 +4,7 @@
     align-items: center;
     background-color: #141D2F;
     color: white;
-    height: 87vh;
+    // height: 87vh;
     overflow: hidden;
     position: relative; 
 
@@ -19,6 +19,7 @@
             font-size: 90px;
             font-weight: 700;
             margin-bottom: 20px;
+            margin-top: 94px;
         }
 
         p {
