--- a/src/app/mainPage/skills/skills.component.scss
+++ b/src/app/mainPage/skills/skills.component.scss
@@ -6,6 +6,7 @@
     color: white;
     height: auto;
     width: 98%;
+    margin-top: 83px;
 
     .skills-grid {
         display: grid;
@@ -50,6 +51,7 @@
             font-size: 70px;
             font-weight: bold;
             margin-bottom: 20px;
+            margin-top: -25px;
         }
 
         p {
