--- a/src/app/mainPage/rezession/rezession.component.scss
+++ b/src/app/mainPage/rezession/rezession.component.scss
@@ -75,6 +75,7 @@ body {
             }
 
             .profile-line {
+                display: none;
                 position: absolute;
                 width: 151px;
                 height: 3px;
