--- a/src/app/mainPage/skills/skills.component.scss
+++ b/src/app/mainPage/skills/skills.component.scss
@@ -233,6 +233,7 @@
             max-width: 92%; // Beschränkt die Breite der Schrift
             text-align: right; // Text rechtsbündig
             margin: 0 auto 20px 0; // Zentriert nach rechts ohne Overflow
+            width: 100%;
 
             h2 {
                 font-size: 48px;
